--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-/* main palette: 
- https://coolors.co/palette/c51529-fe817d-703434-e58265-d36951-cd5d5c-bdac91-a47063-2ea098-61b8cc 
+/* main palette:
+ https://coolors.co/palette/c51529-fe817d-703434-e58265-d36951-cd5d5c-bdac91-a47063-2ea098-61b8cc
   required colours (lightest to darkest): #FFCEC0 #FFAE97 #C35B3D #A03B1E
 */
 
@@ -42,6 +42,7 @@ section.main div.mim a {
 
 section.main div#contact p {
   font-size: 22px;
+  margin-left: 5%;
 }
 
 section.main div#contact img {
