--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ section.main div.mim a {
 
 section.main div#contact p {
   font-size: 22px;
-  margin-left: 5%;
+  margin: 5%;
 }
 
 section.main div#contact img {
