--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ section.main div.mim a {
 section.main div#contact p {
   font-size: 22px;
   margin-left: 5%;
-  margin-right: 5%;
+  padding-right: 5%;
 }
 
 section.main div#contact img {
