--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ section.main div.mim a {
 
 section.main div#contact p {
   font-size: 22px;
+  width: 90%;
   margin-left: 5%;
   padding-right: 5px;
 }
