--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ section.main div#contact p {
   width: 80%;
   margin-left: 5%;
   padding-right: 15px;
+  margin-right: 5%;
 }
 
 section.main div#contact img {
