--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ section.main div#contact p {
   margin-left: 5%;
   padding-right: 15px;
   margin-right: 5%;
+  margin-bottom: 5%;
 }
 
 section.main div#contact img {
