--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ section.main div#contact p {
   padding-right: 15px;
   margin-right: 5%;
   margin-bottom: 15px;
+  padding-bottom: 15px;
 }
 
 section.main div#contact img {
