--- a/style.css
+++ b/style.css
@@ -1,263 +1,302 @@
 /* main palette:
  https://coolors.co/palette/c51529-fe817d-703434-e58265-d36951-cd5d5c-bdac91-a47063-2ea098-61b8cc
-  required colours (lightest to darkest): #FFCEC0 #FFAE97 #C35B3D #A03B1E
+	required colours (lightest to darkest): #FFCEC0 #FFAE97 #C35B3D #A03B1E
 */
+
+@media only screen and (min-width: 720px) {		/* stijlregels voor browserschermen > 720px en < 1024px */
+	img.projects {
+		margin: 15px;
+		margin-left: 30px;
+	}
+	
+	section.main div#contact p {
+		font-size: 22px;
+		padding-right: 15px;
+	}
+	
+	section.main div#contact img {
+		max-height: 400px;
+		max-width: 300px;
+	}
+	
+	div.mim h1,
+	div.mim h2,
+	section.main div.mim h2 {
+	font-size: 42px;
+	}
+	
+	div.mim a,
+		div.mim p {
+		font-size: 26px;
+	}
+	
+	section.navbar {	
+		min-height: 30px;
+	}
+		
+	section.navbar a {
+		font: 22px;
+	}
+	
+	section.left p {
+		font-size: 22px;
+	}
+	
+	header#header-text {
+		font-size: 104px;
+	}
+	
+	header#header-text {
+		margin-top: 50px;
+	}
+	
+	*::-webkit-scrollbar {
+		width: 16px;
+	}
+
+	*::-webkit-scrollbar-thumb {
+		border-radius: 10px;
+	}
+}
 
 /*mim = most important message*/
 section.main div.mim {
-  background-color: #A03B1E;
-  max-height: none;
-  overflow: hidden;
+	background-color: #A03B1E;
+	max-height: none;
+	overflow: hidden;
 }
 
+	/* literally everything with border radius 12 ever */
+	img.projects,
+	img.badges,
+	div.welcome,
+	section.main div#contact,
+	section.main div#contact img,
+	section.main div {
+		border-radius: 12px;
+	}
+
 section.left p, section.left h2 {
-  max-width: 90%;
-  margin: 5%;
+	max-width: 90%;
+	margin: 5%;
 }
 
 body#index {
-  overflow: hidden;
+	overflow: hidden;
 }
 
 img.projects {
-  max-width: 50%;
-  margin: 15px;
-  margin-left: 30px;
-  border-radius: 12px;
+	max-width: 50%;
 }
 
 img.badges {
-  max-width: 10%;
-  max-height: 10%;
-  border-radius: 12px;
-  margin: 2%;
+	max-width: 10%;
+	max-height: 10%;
+	margin: 2%;
 }
 
 section#contact.main {
-  width: 80%;
-  float: none;
-  margin-top: 5%;
-  margin-left: 10%;
-  margin-right: 10%;
+	width: 80%;
+	float: none;
+	margin-top: 5%;
+	margin-left: 10%;
+	margin-right: 10%;
 }
 
 section.main div.mim a {
-  color: #FFAE97;
+	color: #FFAE97;
 }
 
 section.main div#contact p {
-  font-size: 22px;
-  width: 80%;
-  margin-left: 5%;
-  padding-right: 15px;
-  margin-right: 5%;
+	width: 80%;
+	margin-left: 5%;
+	margin-right: 5%;
 }
 
 section.main div#contact img {
-  max-height: 400px;
-  max-width: 300px;
-  margin-left: 5%;
-  margin-top: 5%;
-  border-radius: 12px;
-}
+	margin-left: 5%;
+	margin-top: 5%;
+	}
 
 section.main div#contact {
-  margin-left: 5%;
-  margin-bottom: 2%;
-  width: 80%;
-  max-height: none;
-  border-radius: 12px;
-  background-color: #BDAC91;
-  overflow-y: auto;
+	margin-left: 5%;
+	margin-bottom: 2%;
+	width: 80%;
+	max-height: none;
+	background-color: #BDAC91;
+	overflow-y: auto;
 }
 
 section.main div {
-  margin-left: 5%;
-  margin-bottom: 2%;
-  width: 80%;
-  max-height: 5%;
-  border-radius: 12px;
-  background-color: #FFCEC0;
-  overflow-y: auto;
+	margin-left: 5%;
+	margin-bottom: 2%;
+	width: 80%;
+	max-height: 5%;
+	background-color: #FFCEC0;
+	overflow-y: auto;
 }
 
 section.main div p a {
-  margin-left: 0px;
+	margin-left: 0px;
 }
 
 section.main div a,
 section.main div h2 a {
-  color: #703434;
-  margin-left: 0px;
+	color: #703434;
+	margin-left: 0px;
 }
 
 section.main div h2 a {
-  text-decoration: none;
+	text-decoration: none;
 }
 
 section.main div h2 {
-  color: #703434;
+	color: #703434;
 }
 
 section.main div p,
 section.main div h1,
 section.main div h2,
 section.main div a {
-  margin-left: 5%;
+	margin-left: 5%;
 }
 
 div.mim h1,
 div.mim h2,
 section.main div.mim h2 {
-  color: #ffffff;
-  font-size: 42px;
+	color: #ffffff;
 }
 
+
 div.mim a {
-  color: #FFAE97;
-  font-size: 26px;
+	color: #FFAE97;
 }
 
 div.mim p {
-  font-size: 26px;
-  color: #ffffff;
+	color: #ffffff;
 }
 
 * {
-  margin: 0px;
-  padding: 0px;
-}
-
-html {
-  max-height: 1024px;
-  width: auto;
+	margin: 0px;
+	padding: 0px;
 }
 
 section.main,
 html {
-  background-color: #E58265;
+	background-color: #E58265;
 }
 
 section.navbar {
-  background-color: #BDAC91;
-  width: 100%;
-  min-height: 30px;
-  z-index: 3;
+	background-color: #BDAC91;
+	width: 100%;
+	z-index: 3;
 }
 
 section.navbar li {
-  display: inline;
+	display: inline;
 }
 
 section.navbar a {
-  margin-left: 5%;
-  font-family: 'Cherry Bomb One', cursive;
-  color: #703434;
-  text-decoration: none;
-  font: 22px;
+	margin-left: 5%;
+	font-family: 'Cherry Bomb One', cursive;
+	color: #703434;
+	text-decoration: none;
 }
 
 section.navbar a:hover {
-  color: #9b252f;
+	color: #9b252f;
 }
 
 section.left {
-  height: 100%;
-  width: 20%;
-  background-color: #BDAC91;
-  float: left;
-  overflow-y: scroll;
-  position: fixed;
-  z-index: -1;
+	height: 100%;
+	width: 20%;
+	background-color: #BDAC91;
+	float: left;
+	overflow-y: scroll;
+	position: fixed;
+	z-index: -1;
 }
 
 section.left:hover {
-  overflow-y: auto;
+	overflow-y: auto;
 }
 
 section.left p {
-  color: #A47063;
-  font-weight: bold;
-  font-size: 22px;
+	color: #A47063;
+	font-weight: bold;
 }
 
 section.left h1,
 section.left h2 {
-  color: #703434;
+	color: #703434;
 }
 
 img.aboutme {
-  min-width: 60%;
-  max-width: 90%;
-  height: auto;
-  padding-left: 5%;
-  padding-top: 10%;
+	min-width: 60%;
+	max-width: 90%;
+	height: auto;
+	padding-left: 5%;
+	padding-top: 10%;
 }
 
 section.main {
-  min-height: 1024px;
-  width: 80%;
-  float: right;
-  margin-top: 5%;
-  overflow: auto;
+	min-height: 1024px;
+	width: 80%;
+	float: right;
+	margin-top: 5%;
+	overflow: auto;
 }
 
 header#header-text {
-  font-size: 104px;
-  text-align: center;
-  margin-top: 50px;
-  z-index: 1;
-  color: #ffeeee;
-  text-shadow: 2px 2px #9b252f;
+	text-align: center;
+	z-index: 1;
+	color: #ffeeee;
+	text-shadow: 2px 2px #9b252f;
 }
 
 div#welcome {
-  text-align: center;
-  background-color: #A03B1E;
-  margin-left: 10%;
-  width: 80%;
-  border-radius: 12px;
-  max-height: none;
+	text-align: center;
+	background-color: #A03B1E;
+	margin-left: 10%;
+	width: 80%;
+	max-height: none;
 }
 
 h2 {
-  font-family: 'Fredoka', sans-serif;
+	font-family: 'Fredoka', sans-serif;
 }
 
 p,
 #header-text {
-  font-family: 'Dongle', sans-serif;
+	font-family: 'Dongle', sans-serif;
 }
 
 h1,
 h2,
 p {
-  margin-left: 5px;
+	margin-left: 5px;
 }
 
 img.icon {
-  max-width: 90%;
-  max-height: 90%;
+	max-width: 90%;
+	max-height: 90%;
 }
 
 /* ===== Scrollbar CSS ===== */
 /* Firefox */
 * {
-  scrollbar-width: auto;
-  scrollbar-color: #A47063 #703434;
+	scrollbar-width: auto;
+	scrollbar-color: #A47063 #703434;
 }
+
+
 
 /* Chrome, Edge, and Safari */
-*::-webkit-scrollbar {
-  width: 16px;
-}
-
 *::-webkit-scrollbar-track {
-  background: #E58265;
+	background: #E58265;
 }
 
 *::-webkit-scrollbar-thumb {
-  background-color: #A47063;
-  border-radius: 10px;
-  border: 3px solid #703434;
+	background-color: #A47063;
+	border: 3px solid #703434;
 }
