--- a/style.css
+++ b/style.css
@@ -66,6 +66,12 @@
 }
 
 /* stijlregels for mobiel */
+
+	section.left {
+		width: 100%;
+		max-height: 25%;
+	}	
+
 		img.projects {
 		margin: 15px;
 		margin-left: 30px;
@@ -119,11 +125,6 @@
 	*::-webkit-scrollbar-thumb {
 		border-radius: 10px;
 	}
-	
-	section.left {
-		width: 100%;
-		height: 20%;
-	}	
 
 
 /* stijlregels for allebei */
