--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@
 	}
 }
 
-/* stijlregels for mobiel */
+@media only screen and (max-width: 719px) { /* stijlregels for mobiel */
 
 	section.main {
 		min-height: 100%;
@@ -138,7 +138,7 @@
 	*::-webkit-scrollbar-thumb {
 		border-radius: 10px;
 	}
-
+}
 
 /* stijlregels for allebei */
 
