fixing the margins on section.main

--- a/style.css
+++ b/style.css
@@ -152,8 +152,11 @@ section.main div.mim {
 }
 
 section.main {
-	margin-top: 5%;
+	top: 5%;
+	position: absolute;
 	overflow: auto;
+	margin-top: 5%;
+	padding-top: 5%;
 }
 
 
