--- a/style.css
+++ b/style.css
@@ -5,16 +5,18 @@
 
 @media only screen and (min-width: 720px) {		/* stijlregels voor browserschermen > 720px en < 1024px */
 	section.left {
-		float: left;
 		max-width: 20%;
+		position: absolute;
 		height: 100%;
 	}
 	
 	section.main {
+		position: absolute;
 		min-height: 1024px;
+		left: 20%;
 		width: 80%;
-		float: right;
-	}
+		}
+	
 	
 	img.projects {
 		margin: 15px;
@@ -282,8 +284,7 @@ html {
 }
 
 section.navbar {
-	background-color: #BDAC91;`
-	color: red;
+	background-color: #BDAC91;
 	width: 100%;
 	z-index: 3;
 	position: fixed;
@@ -347,7 +348,6 @@ div#welcome {
 	width: 80%;
 	max-height: none;
 	display: flex;
-	justify-content: center;
 	align-items: center;
 }
 
