--- a/style.css
+++ b/style.css
@@ -159,6 +159,13 @@ section.main div.mim {
 	overflow: hidden;
 }
 
+div#welcome header {
+	margin: 5%;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+}
+
 #contactpage {
 	left: 0px;
 	margin-left: 15%;
