--- a/style.css
+++ b/style.css
@@ -15,8 +15,11 @@
 		min-height: 1024px;
 		left: 20%;
 		width: 80%;
-		}
+	}
 	
+	div {
+		max-height: 150px;
+	}
 	
 	img.projects {
 		margin: 15px;
@@ -80,6 +83,10 @@
 		min-width: 100%;
 		float: none;
 		}
+
+	h2 {
+		font-size: 20px;
+	}
 
 	section.left {
 		display: none;
@@ -157,6 +164,10 @@ section.main div.mim {
 	background-color: #A03B1E;
 	max-height: none;
 	overflow: hidden;
+}
+
+p {
+	margin: 5%;
 }
 
 div#welcome header {
@@ -357,7 +368,7 @@ header#header-text {
 	text-align: center;
 	z-index: 1;
 	color: #ffeeee;
-	text-shadow: 2px 2px #9b252f;
+	text-shadow: 3px 3px #9b252f;
 }
 
 div#welcome {
