--- a/style.css
+++ b/style.css
@@ -1,66 +1,292 @@
+/* main palette:
+ https://coolors.co/palette/c51529-fe817d-703434-e58265-d36951-cd5d5c-bdac91-a47063-2ea098-61b8cc
+	required colours (lightest to darkest): #FFCEC0 #FFAE97 #C35B3D #A03B1E
+*/
+
+@media only screen and (min-width: 720px) {		/* stijlregels voor browserschermen > 720px en < 1024px */
+	section.left {
+		max-width: 20%;
+		position: absolute;
+		height: 100%;
+	}
+	
+	section.main {
+		position: absolute;
+		min-height: 1024px;
+		left: 20%;
+		width: 80%;
+	}
+	
+	div {
+		max-height: 150px;
+	}
+	
+	img.projects {
+		margin: 15px;
+		margin-left: 30px;
+	}
+	
+	section.main div#contact p {
+		font-size: 22px;
+		padding-right: 15px;
+	}
+	
+	section.main div#contact img {
+		max-height: 400px;
+		max-width: 300px;
+	}
+	
+	div.mim h1,
+	div.mim h2,
+	section.main div.mim h2 {
+	font-size: 42px;
+	}
+	
+	div.mim a,
+		div.mim p {
+		font-size: 26px;
+	}
+	
+	section.navbar {	
+		min-height: 30px;
+	}
+		
+	section.navbar a {
+		font: 22px;
+	}
+	
+	section.left p {
+		font-size: 22px;
+	}
+	
+	header#header-text {
+		font-size: 104px;
+	}
+	
+	header#header-text {
+		margin-top: 50px;
+	}
+	
+	*::-webkit-scrollbar {
+		width: 16px;
+	}
+
+	*::-webkit-scrollbar-thumb {
+		border-radius: 10px;
+	}
+}
+
+@media only screen and (max-width: 719px) { /* stijlregels for mobiel */
+
+	section.main {
+		min-height: 100%;
+		min-width: 100%;
+		float: none;
+		}
+
+	h2 {
+		font-size: 20px;
+	}
+
+	section.left {
+		display: none;
+		align-items: flex-end;
+	}	
+
+		img.projects {
+		margin: 15px;
+		margin-left: 30px;
+	}
+	
+	img.badges {
+		min-width: 20%;
+		min-height: 20%;
+		margin: 2%;
+}
+	
+	section.main div#contact p {
+		font-size: 22px;
+		padding-right: 15px;
+	}
+	
+	section.main div#contact img {
+		max-height: 400px;
+		max-width: 300px;
+	}
+	
+	div.mim h1,
+	div.mim h2,
+	section.main div.mim h2 {
+	font-size: 42px;
+	}
+	
+	div.mim a,
+		div.mim p {
+		font-size: 26px;
+	}
+	
+	section.navbar {	
+		position: fixed;
+		top: 0px;
+		left: 0px;
+		min-height: 30px;
+	}
+		
+	section.navbar a {
+		font: 22px;
+	}
+	
+	section.left p {
+		font-size: 22px;
+	}
+	
+	header#header-text {
+		font-size: 104px;
+	}
+	
+	header#header-text {
+		margin-top: 50px;
+	}
+	
+	*::-webkit-scrollbar {
+		width: 16px;
+	}
+
+	*::-webkit-scrollbar-thumb {
+		border-radius: 10px;
+	}
+}
+
+/* stijlregels for allebei */
+
 /*mim = most important message*/
 section.main div.mim {
 	background-color: #A03B1E;
 	max-height: none;
 	overflow: hidden;
 }
-section.navbar a {
-	font-family: 'Cherry Bomb One', cursive;
-}
-h2 {
-	font-family: 'Fredoka', sans-serif;
+
+p {
+	margin: 5%;
+	margin-top: 5px;
 }
 
-p, #header-text {
-	font-family: 'Dongle', sans-serif;
+div#welcome header {
+	margin: 5%;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
 }
 
-@media only screen and (min-width: 720px) {		/* stijlregels voor browserschermen > 720px en < 1024px */
-	body {
-		display: grid;
-		grid-template-columns: 0.5fr 1.5fr;
-		grid-template-rows: 0.5fr 1fr;
-		gap: 0px 0px;
-		grid-auto-flow: row;
-		grid-template-areas:
-			"nav"
-			"side main";
+#contactpage {
+	left: 0px;
+	margin-left: 15%;
+	margin-right: 15%;
+	width: 80%
+}
+
+section.main {
+	top: 5%;
+	position: absolute;
+	overflow: auto;
+	margin-top: 5%;
+}
+
+
+	/* literally everything with border radius 12 ever */
+	img.projects,
+	img.badges,
+	div#welcome,
+	section.main div#contact,
+	section.main div#contact img,
+	section.main div {
+		border-radius: 12px;
 	}
+
+section.left p, section.left h2 {
+	max-width: 90%;
+	margin: 5%;
 }
 
-@media only screen and (max-width: 719px) { /* stijlregels for mobiel */
-	body {
-		display: grid;
-		grid-template-columns: 1fr;
-		grid-template-rows: 0.5fr 1fr 0.5fr;
-		gap: 0px 0px;
-		grid-auto-flow: row;
-		grid-template-areas:
-			"navbar"
-			"main"
-			"side";
-	}
+body#index {
+	overflow: hidden;
+}
+
+img.projects {
+	max-width: 50%;
+}
+
+img.badges {
+	max-width: 10%;
+	max-height: 10%;
+	margin: 2%;
+}
+
+section#contact.main {
+	width: 80%;
+	float: none;
+	margin-top: 5%;
+	margin-left: 10%;
+	margin-right: 10%;
 }
 
 section.main div.mim a {
 	color: #FFAE97;
 }
 
+section.main div#contact p {
+	max-width: 80%;
+	margin-left: 5%;
+	margin-right: 5%;
+}
+
+section.main div#contact img {
+	margin-left: 5%;
+	margin-top: 5%;
+	max-width: 80%;
+	}
+
 section.main div#contact {
+	margin-left: 5%;
+	margin-bottom: 2%;
+	width: 80%;
+	max-height: none;
 	background-color: #BDAC91;
-	overflow-y: auto;}
+	overflow-y: auto;
+}
 
 section.main div {
+	margin-left: 5%;
+	margin-bottom: 2%;
+	width: 80%;
+	max-height: 5%;
 	background-color: #FFCEC0;
+	overflow-y: auto;
+}
+
+section.main div p a {
+	margin-left: 0px;
 }
 
 section.main div a,
 section.main div h2 a {
 	color: #703434;
+	margin-left: 0px;
+}
+
+section.main div h2 a {
+	text-decoration: none;
 }
 
 section.main div h2 {
 	color: #703434;
+}
+
+section.main div p,
+section.main div h1,
+section.main div h2,
+section.main div a {
+	margin-left: 5%;
 }
 
 div.mim h1,
@@ -78,6 +304,11 @@ div.mim p {
 	color: #ffffff;
 }
 
+* {
+	margin: 0px;
+	padding: 0px;
+}
+
 section.main,
 html {
 	background-color: #E58265;
@@ -85,10 +316,20 @@ html {
 
 section.navbar {
 	background-color: #BDAC91;
-	}
+	width: 100%;
+	z-index: 3;
+	position: fixed;
+}
+
+section.navbar li {
+	display: inline;
+}
 
 section.navbar a {
+	margin-left: 5%;
+	font-family: 'Cherry Bomb One', cursive;
 	color: #703434;
+	text-decoration: none;
 }
 
 section.navbar a:hover {
@@ -97,10 +338,18 @@ section.navbar a:hover {
 
 section.left {
 	background-color: #BDAC91;
+	overflow-y: scroll;
+	position: fixed;
+	z-index: -1;
+}
+
+section.left:hover {
+	overflow-y: auto;
 }
 
 section.left p {
 	color: #A47063;
+	font-weight: bold;
 }
 
 section.left h1,
@@ -108,12 +357,49 @@ section.left h2 {
 	color: #703434;
 }
 
+img.aboutme {
+	min-width: 60%;
+	max-width: 90%;
+	height: auto;
+	padding-left: 5%;
+	padding-top: 10%;
+}
+
 header#header-text {
+	text-align: center;
+	z-index: 1;
 	color: #ffeeee;
+	text-shadow: 3px 3px #9b252f;
 }
 
 div#welcome {
+	text-align: center;
 	background-color: #A03B1E;
+	margin-left: 10%;
+	width: 80%;
+	max-height: none;
+	display: flex;
+	align-items: center;
+}
+
+h2 {
+	font-family: 'Fredoka', sans-serif;
+}
+
+p,
+#header-text {
+	font-family: 'Dongle', sans-serif;
+}
+
+h1,
+h2,
+p {
+	margin-left: 5px;
+}
+
+img.icon {
+	max-width: 90%;
+	max-height: 90%;
 }
 
 /* ===== Scrollbar CSS ===== */
@@ -133,351 +419,4 @@ div#welcome {
 *::-webkit-scrollbar-thumb {
 	background-color: #A47063;
 	border: 3px solid #703434;
-}
-
-
-
-/**
- * 1. Correct the line height in all browsers.
- * 2. Prevent adjustments of font size after orientation changes in iOS.
- */
-
-html {
-  line-height: 1.15; /* 1 */
-  -webkit-text-size-adjust: 100%; /* 2 */
-}
-
-/* Sections
-   ========================================================================== */
-
-/**
- * Remove the margin in all browsers.
- */
-
-body {
-  margin: 0;
-}
-
-/**
- * Render the `main` element consistently in IE.
- */
-
-main {
-  display: block;
-}
-
-/**
- * Correct the font size and margin on `h1` elements within `section` and
- * `article` contexts in Chrome, Firefox, and Safari.
- */
-
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
-}
-
-/* Grouping content
-   ========================================================================== */
-
-/**
- * 1. Add the correct box sizing in Firefox.
- * 2. Show the overflow in Edge and IE.
- */
-
-hr {
-  box-sizing: content-box; /* 1 */
-  height: 0; /* 1 */
-  overflow: visible; /* 2 */
-}
-
-/**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers.
- */
-
-pre {
-  font-family: monospace, monospace; /* 1 */
-  font-size: 1em; /* 2 */
-}
-
-/* Text-level semantics
-   ========================================================================== */
-
-/**
- * Remove the gray background on active links in IE 10.
- */
-
-a {
-  background-color: transparent;
-}
-
-/**
- * 1. Remove the bottom border in Chrome 57-
- * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
- */
-
-abbr[title] {
-  border-bottom: none; /* 1 */
-  text-decoration: underline; /* 2 */
-  text-decoration: underline dotted; /* 2 */
-}
-
-/**
- * Add the correct font weight in Chrome, Edge, and Safari.
- */
-
-b,
-strong {
-  font-weight: bolder;
-}
-
-/**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers.
- */
-
-code,
-kbd,
-samp {
-  font-family: monospace, monospace; /* 1 */
-  font-size: 1em; /* 2 */
-}
-
-/**
- * Add the correct font size in all browsers.
- */
-
-small {
-  font-size: 80%;
-}
-
-/**
- * Prevent `sub` and `sup` elements from affecting the line height in
- * all browsers.
- */
-
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-
-sub {
-  bottom: -0.25em;
-}
-
-sup {
-  top: -0.5em;
-}
-
-/* Embedded content
-   ========================================================================== */
-
-/**
- * Remove the border on images inside links in IE 10.
- */
-
-img {
-  border-style: none;
-}
-
-/* Forms
-   ========================================================================== */
-
-/**
- * 1. Change the font styles in all browsers.
- * 2. Remove the margin in Firefox and Safari.
- */
-
-button,
-input,
-optgroup,
-select,
-textarea {
-  font-family: inherit; /* 1 */
-  font-size: 100%; /* 1 */
-  line-height: 1.15; /* 1 */
-  margin: 0; /* 2 */
-}
-
-/**
- * Show the overflow in IE.
- * 1. Show the overflow in Edge.
- */
-
-button,
-input { /* 1 */
-  overflow: visible;
-}
-
-/**
- * Remove the inheritance of text transform in Edge, Firefox, and IE.
- * 1. Remove the inheritance of text transform in Firefox.
- */
-
-button,
-select { /* 1 */
-  text-transform: none;
-}
-
-/**
- * Correct the inability to style clickable types in iOS and Safari.
- */
-
-button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
-  -webkit-appearance: button;
-}
-
-/**
- * Remove the inner border and padding in Firefox.
- */
-
-button::-moz-focus-inner,
-[type="button"]::-moz-focus-inner,
-[type="reset"]::-moz-focus-inner,
-[type="submit"]::-moz-focus-inner {
-  border-style: none;
-  padding: 0;
-}
-
-/**
- * Restore the focus styles unset by the previous rule.
- */
-
-button:-moz-focusring,
-[type="button"]:-moz-focusring,
-[type="reset"]:-moz-focusring,
-[type="submit"]:-moz-focusring {
-  outline: 1px dotted ButtonText;
-}
-
-/**
- * Correct the padding in Firefox.
- */
-
-fieldset {
-  padding: 0.35em 0.75em 0.625em;
-}
-
-/**
- * 1. Correct the text wrapping in Edge and IE.
- * 2. Correct the color inheritance from `fieldset` elements in IE.
- * 3. Remove the padding so developers are not caught out when they zero out
- *    `fieldset` elements in all browsers.
- */
-
-legend {
-  box-sizing: border-box; /* 1 */
-  color: inherit; /* 2 */
-  display: table; /* 1 */
-  max-width: 100%; /* 1 */
-  padding: 0; /* 3 */
-  white-space: normal; /* 1 */
-}
-
-/**
- * Add the correct vertical alignment in Chrome, Firefox, and Opera.
- */
-
-progress {
-  vertical-align: baseline;
-}
-
-/**
- * Remove the default vertical scrollbar in IE 10+.
- */
-
-textarea {
-  overflow: auto;
-}
-
-/**
- * 1. Add the correct box sizing in IE 10.
- * 2. Remove the padding in IE 10.
- */
-
-[type="checkbox"],
-[type="radio"] {
-  box-sizing: border-box; /* 1 */
-  padding: 0; /* 2 */
-}
-
-/**
- * Correct the cursor style of increment and decrement buttons in Chrome.
- */
-
-[type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
-  height: auto;
-}
-
-/**
- * 1. Correct the odd appearance in Chrome and Safari.
- * 2. Correct the outline style in Safari.
- */
-
-[type="search"] {
-  -webkit-appearance: textfield; /* 1 */
-  outline-offset: -2px; /* 2 */
-}
-
-/**
- * Remove the inner padding in Chrome and Safari on macOS.
- */
-
-[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-
-/**
- * 1. Correct the inability to style clickable types in iOS and Safari.
- * 2. Change font properties to `inherit` in Safari.
- */
-
-::-webkit-file-upload-button {
-  -webkit-appearance: button; /* 1 */
-  font: inherit; /* 2 */
-}
-
-/* Interactive
-   ========================================================================== */
-
-/*
- * Add the correct display in Edge, IE 10+, and Firefox.
- */
-
-details {
-  display: block;
-}
-
-/*
- * Add the correct display in all browsers.
- */
-
-summary {
-  display: list-item;
-}
-
-/* Misc
-   ========================================================================== */
-
-/**
- * Add the correct display in IE 10+.
- */
-
-template {
-  display: none;
-}
-
-/**
- * Add the correct display in IE 10.
- */
-
-[hidden] {
-  display: none;
 }
