--- a/portfoliov3/style.css
+++ b/portfoliov3/style.css
@@ -19,3 +19,15 @@ body {
 .secondary {
 	background: #fbc48e;
 }
+
+.h1, .h2, .header {
+  font-family: "Monofett", monospace;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.p, .h3 {
+  font-family: "Potta One", system-ui;
+  font-weight: 400;
+  font-style: normal;
+}
