--- a/portfoliov3/style.css
+++ b/portfoliov3/style.css
@@ -7,7 +7,7 @@ html {
     width: 100%;
 }
 
-p, h3, h2, h1, header {
+input, p, h3, h2, h1, header {
 	margin: 5px;
 }
 
@@ -69,7 +69,7 @@ h1, h2 {
 	color: #bf442b;
 }
 
-p, h3 {
+label, input, p, h3 {
 	font-family: "Potta One", system-ui;
 	font-weight: 400;
 	font-style: normal;
@@ -85,7 +85,11 @@ a:hover {
 	color: #fbc48e;
 }
 
-img, div {
+a#now {
+	color: #a6ced8;
+}
+
+img, div, input, button {
 	border-radius: 12px;
 }
 
@@ -97,7 +101,7 @@ div {
 }
 
 section.right {
-	width: 20%;
+	width: 25%;
 	right: 0;
 	height: 100%;
 	overflow-y: scroll;
@@ -130,7 +134,11 @@ section.right {
 section.main {
 	position: absolute;
 	min-height: 1024px;
-	width: 80%;
+	width: 75%;
+	/*background-image: url('background-.png');
+	background-repeat: repeat;
+	background-position: center; 
+	the concept is to have my art repeat over and over again as you scroll, to make the website more lively and less empty. but i need more art */
 }
 
 section.navbar {	
@@ -164,12 +172,14 @@ section.navbar {
 		color: #bf442b;
 	}
 
-	img.lightswitch {
-		width: 30px;
-		height: 30px;
+	.lightswitch {
+		width: 25px;
+		height: 25px;
 		display: inline-block;
 		margin-left: -30px;
 		margin-top: 2px;
+		padding: 2px;
+		border: none;
 	}
 
 div#welcome {
