--- a/style.css
+++ b/style.css
@@ -140,11 +140,16 @@ section#projects div {
 	margin-top: 5%;
 }
 
-img.projects {
+section#projects div h2, section#projects div p {
 	float: right;
+	display: block;
+	text-align: right;
+}
+
+img.projects {
+	float: left;
 	max-height: 60%;
 	max-width: 80%;
-	display: inline-block;
 	margin: 10px;
 }
 
