--- a/style.css
+++ b/style.css
@@ -11,25 +11,6 @@ input, p, h3, h2, h1, header {
 	margin: 5px;
 }
 
-@media only screen and (min-width: 720px) { /* FOR NOT PHONES */
-
-	section.right, section.main {
-		top: 70px;
-	}
-
-	div:last-of-type {
-		margin-bottom: 100px;
-	}
-
-}
-
-@media only screen and (max-width: 719px) { /* FOR PHONES */
-
-	section.right {
-		display: none; /* This will need a fix later in the sense that there will have to be an extra, hidden "about me" page, that only appears on mobile. Because otherwise, people can't find anything about me on phone. */
-	}
-}
-
 body, section.main {
 	background-color: #632912;
 	color: #a6ced8;
@@ -102,56 +83,48 @@ div {
 	overflow-x: hidden;
 }
 
-section.right {
-	width: 25%;
-	right: 0;
-	height: 100%;
-	overflow-y: scroll;
-    position: fixed;
+h3.right {
+	display: inline-block;
 }
 
-	h3.right {
-		display: inline-block;
-	}
+img.logo {
+	display: inline-block;
+	text-align: right;
+	width: 30px;
+	height: 30px;
+	margin-left: 10px;
+}
 
-	img.logo {
-		display: inline-block;
-		text-align: right;
-		width: 30px;
-		height: 30px;
-		margin-left: 10px;
-	}
+img.aboutme {
+	width: 60%;
+	height: 80%;
+	margin: 20px;
+}
 
-	img.aboutme {
-		width: 60%;
-		height: 80%;
-		margin: 20px;
-	}
-
-	section.right ul li {
-		padding: 5px;
-		list-style-image: url('list style image.png');
-	}
+section.right ul li {
+	padding: 5px;
+	list-style-image: url('list style image.png');
+}
 
 section#projects div {
 	width: 80%;
 	max-height: 60%;
 	margin: auto;
-	margin-top: 5%;
+	margin-top: 3%;
 }
 
-section#projects div h2, section#projects div p {
-	float: right;
-	display: block;
-	text-align: right;
-}
+	section#projects div h2, section#projects div p {
+		float: right;
+		display: block;
+		text-align: right;
+	}
 
-img.projects {
-	float: left;
-	max-height: 60%;
-	max-width: 80%;
-	margin: 10px;
-}
+	img.projects {
+		float: left;
+		max-height: 60%;
+		max-width: 80%;
+		margin: 10px;
+	}
 
 section.main {
 	position: absolute;
@@ -174,7 +147,7 @@ section.navbar {
 	section.navbar ul {
 		background-color: #FBC48E;
 		margin-right: 10px;
-		width: 210px;
+		width: 310px;
 		margin-left: 20px;
 		height: 30px;
 		margin-top: 20px;
@@ -233,6 +206,99 @@ article.resume div {
 	overflow: auto;
 	margin: auto;
 	margin-top: 20px;
+}
+
+.checkbox {
+	-webkit-appearance: none;
+	padding: 6px;
+	background-color: #fafafa;
+	border: 1px solid #cacece;
+	border-radius: 3px;
+	display: inline-block;
+	position: relative;
+}
+
+.checkbox:checked:after {
+	content: '\2714';
+	font-size: 14px;
+	position: absolute;
+	top: 0px;
+	left: 3px;
+	color: #632912;
+	margin-top: -5px;
+}
+
+section#projects div.invis {
+	background-color: transparent;
+	max-width: none;
+	width: 99%;
+}
+
+@media only screen and (min-width: 720px) { /* FOR NOT PHONES */
+
+	section.right, section.main {
+		top: 70px;
+	}
+
+	div:last-of-type {
+		margin-bottom: 100px;
+	}
+
+	section.right {
+		width: 25%;
+		right: 0;
+		height: 100%;
+		overflow-y: scroll;
+		position: fixed;
+	}
+
+}
+
+@media only screen and (max-width: 719px) { /* FOR PHONES */
+
+	section.right {
+		width: 100%;
+		height: auto;
+		overflow-y: auto;
+		position: relative;
+		background-color: #33110488;
+		margin-top: 30px;
+	}
+
+	section.right div:first-child {
+		background-color: #bf442b;
+	}
+
+	section.right div h2 {
+		color: #331104;
+	}
+
+	section.main {
+		width: 99%;
+		margin-left: 1%;
+		margin-right: 1%;
+		height: auto;
+		position: relative;
+	}
+
+	div {
+		padding: 10px;
+	}
+
+	div.experience-container div {
+		padding: 0px;
+		margin: 0px;
+	}
+
+	div#welcome, section#projects div.primary {
+		margin-top: 100px;
+	}
+
+	header#header-text {
+		font-size: 76px;
+		margin: 5px;
+		font-family: billo;
+	}
 }
 
 /* ===== Scrollbar CSS ===== */
